# OpenHRV

./: .devcontainer.json  .gitignore  OpenHRV.py  README.md  __main__.py  changelog.md  changelog.yml  config.py  environment.yml  logger.py  mac_os_app.spec  model.py  pacer.py  pyproject.toml  resources.py  resources.qrc  sensor.py  utils.py  view.py
.devcontainer/: compose.yml  devcontainer.json  install_dependencies.sh  post_create.sh  post_create_commands.sh  post_start.sh
.github/workflows/: build.yml  build_windows.yml  manual_build.yml  release_build.yml  test.yml
docs/: compile_resources.sh  logo.icns  rc_resources.py  resources.qrc  troubleshooting.md
openhrv/: OpenHRV.py  __init__.py  app.py  config.py  logger.py  model.py  pacer.py  resources.py  sensor.py  test_app.py  test_gui.py  utils.py  view.py
test/: app.py  conftest.py  profile_app.py  test_smoke.py
