[project]
name = "OpenHRV"
version = "1.0.0"
requires-python = "== 3.11.*"
dependencies = ["PySide6 == 6.7.0"]

[project.optional-dependencies]
dev = ["snakeviz"]
build = ["pyinstaller"]

[tool.mypy]
check_untyped_defs = true

[project.gui-scripts]
# command line entry points
openhrv = "openhrv.app:main"
