[project]
name = "OpenHRV"
version = "1.0.0"
# Support all Python versions that are compatible with the PySide6 version.
# See compatibility matrix at https://wiki.qt.io/Qt_for_Python.
requires-python = ">= 3.9"
dependencies = ["PySide6 >= 6.8"]

[project.optional-dependencies]
dev = ["snakeviz"]
build = ["pyinstaller"]

[tool.mypy]
check_untyped_defs = true

[project.gui-scripts]
# command line entry points
openhrv = "openhrv.app:main"
