[project]
name = "OpenHRV"
version = "1.1.0"
# Support all Python versions that are compatible with the PySide6 version.
# See compatibility matrix at https://wiki.qt.io/Qt_for_Python.
requires-python = ">= 3.9"
dependencies = ["PySide6 >= 6.10"]

[project.optional-dependencies]
dev = ["snakeviz"]
build = ["pyinstaller"]
test = ["pytest"]

[tool.mypy]
check_untyped_defs = true

[tool.pytest.ini_options]
# Collect tests from test/; conftest.py puts that dir on sys.path so the smoke
# test can import the existing mock sensor as a top-level `app` module.
testpaths = ["test"]

[project.gui-scripts]
# command line entry points
openhrv = "openhrv.app:main"
